--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,7 @@ http {
     limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=5r/s;
     limit_req_zone $binary_remote_addr zone=quiz_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=default_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=assets_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=tts_limit:10m rate=5r/s;
     limit_req_zone $binary_remote_addr zone=translate_limit:10m rate=5r/s;
 
@@ -45,7 +46,7 @@ http {
         include /etc/nginx/snippets/security-headers.inc;
 
         # Define valid SPA routes
-        location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets)(/.*)?$ {
+        location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets|phrasebook)(/.*)?$ {
             include /etc/nginx/snippets/ratelimit-default.inc;
             root /usr/share/nginx/html;
             try_files /index.html =404;
@@ -67,7 +68,7 @@ http {
 
         # Serve frontend static assets
         location ~ ^/assets/.*\.(js|css|map)$ {
-            include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/ratelimit-assets.inc;
             include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files $uri =404;
@@ -76,7 +77,7 @@ http {
 
         # Serve static assets for frontend (vite icon and favicon)
         location ~ ^/(vite\.svg|favicon\.svg) {
-            include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/ratelimit-assets.inc;
             include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files $uri =404;
