--- a/nginx.conf
+++ b/nginx.conf
@@ -46,7 +46,7 @@ http {
         include /etc/nginx/snippets/security-headers.inc;
 
         # Define valid SPA routes
-        location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets|phrasebook)(/.*)?$ {
+        location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets|phrasebook|verb-conjugation)(/.*)?$ {
             include /etc/nginx/snippets/ratelimit-default.inc;
             root /usr/share/nginx/html;
             try_files /index.html =404;
@@ -250,6 +250,19 @@ http {
         # Translation endpoints - stricter rate limiting
         location /v1/translate {
             include /etc/nginx/snippets/ratelimit-translate.inc;
+            include /etc/nginx/snippets/security-headers.inc;
+
+            proxy_pass http://backend:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Cookie $http_cookie;
+        }
+
+        # Verb conjugation endpoints - moderate rate limiting
+        location /v1/verb-conjugations/ {
+            include /etc/nginx/snippets/ratelimit-api.inc;
             include /etc/nginx/snippets/security-headers.inc;
 
             proxy_pass http://backend:8080;
