--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -17,5 +17,6 @@
   "htmlWhitespaceSensitivity": "css",
   "vueIndentScriptAndStyle": false,
   "embeddedLanguageFormatting": "auto",
-  "singleAttributePerLine": false
+  "singleAttributePerLine": false,
+  "plugins": []
 }
