--- a/nginx.conf
+++ b/nginx.conf
@@ -48,6 +48,7 @@ http {
         # Define valid SPA routes
         location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets|phrasebook|verb-conjugation)(/.*)?$ {
             include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files /index.html =404;
         }
@@ -55,6 +56,7 @@ http {
         # Mobile SPA routes
         location ~ ^/m(/.*)?$ {
             include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files /index.html =404;
         }
@@ -62,6 +64,7 @@ http {
         # Admin routes - serve from frontend
         location ~ ^/admin/ {
             include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files /index.html =404;
         }
@@ -72,7 +75,6 @@ http {
             include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files $uri =404;
-            add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
         # Serve static assets for frontend (vite icon and favicon)
@@ -81,7 +83,6 @@ http {
             include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files $uri =404;
-            add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
         # Serve build-time version file (avoid caching)
@@ -99,7 +100,6 @@ http {
             include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files $uri =404;
-            add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
         # Legacy favicon requests: try .ico, fallback to .svg (single place)
@@ -108,7 +108,6 @@ http {
             include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files /favicon.ico /favicon.svg =404;
-            add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
         # Authentication endpoints - stricter rate limiting
@@ -289,6 +288,7 @@ http {
         # Root path
         location = / {
             include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files /index.html =404;
         }
