--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,8 @@
     "axios": "^1.7.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "fabric": "^6.7.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-diff-viewer-continued": "^3.4.0",
