feat: Add Word of the Day feature (backend, API, and database)
- Added database migration for word_of_the_day table with support for both vocabulary questions and snippets
- Created WordOfTheDayService to intelligently select daily words (70% vocabulary, 30% snippets)
- Implemented API handlers for:
  - GET /v1/word-of-day/:date - Get word of the day (JSON)
  - GET /v1/word-of-day/:date/embed - Embeddable HTML iframe version
  - GET /v1/word-of-day/history - Get historical words
- Updated swagger.yaml with complete API documentation
- Added word_of_day_email_enabled field to users table
- Updated all integration tests to include new service
- Generated frontend API types from swagger

The word selection algorithm avoids repeating words within 60 days and prefers recent snippets (last 30 days).
Ready for frontend UI implementation and email template integration.

--- a/otel-collector/config/config.docker.yaml
+++ b/otel-collector/config/config.docker.yaml
@@ -72,6 +72,11 @@ exporters:
       insecure: ${env:SIGNZ_OTEL_COLLECTOR_INSECURE}
     headers:
       Authorization: Bearer ${env:SIGNZ_OTEL_COLLECTOR_TOKEN}
+  otlphttp/coroot:
+    endpoint: ${env:COROOT_HOST}:${env:COROOT_PORT}
+    encoding: proto
+    headers:
+      "x-api-key": ${env:COROOT_API_KEY}
 
 service:
   telemetry:
@@ -83,14 +88,14 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch, resourcedetection, attributes, resource/env]
-      exporters: [otlp]
+      exporters: [otlp, otlphttp/coroot]
     metrics:
       receivers: [otlp, prometheus, postgresql]
       processors: [batch, resourcedetection, attributes, resource/env]
-      exporters: [otlp]
+      exporters: [otlp, otlphttp/coroot]
     logs:
       receivers: [otlp]
       processors: [batch, resourcedetection, attributes, resource/env]
-      exporters: [otlp]
+      exporters: [otlp, otlphttp/coroot]
 
   extensions: [health_check, pprof, zpages]
