--- a/otel-collector/config/config.docker.yaml
+++ b/otel-collector/config/config.docker.yaml
@@ -72,11 +72,6 @@ exporters:
       insecure: ${env:SIGNZ_OTEL_COLLECTOR_INSECURE}
     headers:
       Authorization: Bearer ${env:SIGNZ_OTEL_COLLECTOR_TOKEN}
-  otlphttp/coroot:
-    endpoint: ${env:COROOT_HOST}:${env:COROOT_PORT}
-    encoding: proto
-    headers:
-      "x-api-key": ${env:COROOT_API_KEY}
 
 service:
   telemetry:
@@ -88,14 +83,14 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch, resourcedetection, attributes, resource/env]
-      exporters: [otlp, otlphttp/coroot]
+      exporters: [otlp]
     metrics:
       receivers: [otlp, prometheus, postgresql]
       processors: [batch, resourcedetection, attributes, resource/env]
-      exporters: [otlp, otlphttp/coroot]
+      exporters: [otlp]
     logs:
       receivers: [otlp]
       processors: [batch, resourcedetection, attributes, resource/env]
-      exporters: [otlp, otlphttp/coroot]
+      exporters: [otlp]
 
   extensions: [health_check, pprof, zpages]
