fix otel config

--- a/otel-collector/config/config.docker.test.yaml
+++ b/otel-collector/config/config.docker.test.yaml
@@ -24,10 +24,10 @@ receivers:
   prometheus:
     config:
       scrape_configs:
-      - job_name: 'otel-collector'
-        scrape_interval: 10s
-        static_configs:
-        - targets: ['0.0.0.0:8888']
+        - job_name: "otel-collector"
+          scrape_interval: 10s
+          static_configs:
+            - targets: ["0.0.0.0:8888"]
   hostmetrics:
     collection_interval: 60s
     scrapers:
@@ -61,11 +61,13 @@ processors:
         action: upsert
 
 exporters:
-  otlp:
+  otlp/uptrace:
     endpoint: ${env:SIGNZ_OTEL_COLLECTOR_HOST}:${env:SIGNZ_OTEL_COLLECTOR_PORT}
     tls:
       insecure: ${env:SIGNZ_OTEL_COLLECTOR_INSECURE}
     headers:
+      uptrace-dsn: ${env:UPTRACE_DSN}
+      # Old signoz one, can be deleted soon
       Authorization: Bearer ${env:SIGNZ_OTEL_COLLECTOR_TOKEN}
 
 service:
@@ -78,14 +80,14 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch, resourcedetection, attributes, resource/env]
-      exporters: [otlp]
+      exporters: [otlp/uptrace]
     metrics:
       receivers: [otlp, prometheus, postgresql]
       processors: [batch, resourcedetection, attributes, resource/env]
-      exporters: [otlp]
+      exporters: [otlp/uptrace]
     logs:
       receivers: [otlp]
       processors: [batch, resourcedetection, attributes, resource/env]
-      exporters: [otlp]
+      exporters: [otlp/uptrace]
 
   extensions: [health_check, pprof, zpages]
