--- a/nginx.conf
+++ b/nginx.conf
@@ -46,7 +46,7 @@ http {
         include /etc/nginx/snippets/security-headers.inc;
 
         # Define valid SPA routes
-        location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets|phrasebook|verb-conjugation)(/.*)?$ {
+        location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks|snippets|phrasebook|verb-conjugation|word-of-day)(/.*)?$ {
             include /etc/nginx/snippets/ratelimit-default.inc;
             include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
