--- a/nginx.conf
+++ b/nginx.conf
@@ -179,6 +179,9 @@ http {
             proxy_http_version 1.1;
             proxy_buffering off;
             proxy_cache off;
+            proxy_set_header Accept text/event-stream;
+            add_header X-Accel-Buffering no always;
+            proxy_read_timeout 3600s;
 
             # CORS headers for TTS
             add_header Access-Control-Allow-Origin $http_origin always;
