--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,7 @@
     "js-yaml": "^4.1.0",
     "jsdom": "^26.1.0",
     "msw": "^2.10.2",
+    "orval": "7.16.0",
     "prettier": "^3.6.2",
     "ts-prune": "^0.10.3",
     "typescript": "^5.2.2",
